# PolyMuse-Explainable-Counterpoint-Composer

./: .gitignore  CMakeLists.txt  README.md
JUCE/DemoRunner.app/Contents/Resources/Assets/: google-services.json
Source/: CounterpointEngine.cpp  CounterpointEngine.h  ECCPanel.cpp  ECCPanel.h  ECCTypes.h  ExplanationEngine.cpp  ExplanationEngine.h  Logger.h  Main.cpp  MainComponent.cpp  MainComponent.h  MidiManager.cpp  MidiManager.h  ModelBridge.h  ModelBridgeMock.cpp  PianoKeyboard.h  PianoRoll.cpp  PianoRoll.h  PianoRollGrid.cpp  PianoRollGrid.h  RuleChecker.cpp  RuleChecker.h  SimpleSynth.h
